Fixes thin line appearing on mobile view

--- a/styleguide/source/assets/scss/01-atoms/_table.scss
+++ b/styleguide/source/assets/scss/01-atoms/_table.scss
@@ -43,7 +43,7 @@ table.bt thead {
 }
 
 table.bt tbody td {
-  border: none;
+  border: 0 solid $gray-20;
   display: block;
   vertical-align: top;
 
